1.13.2
------
Fixed bug where messages containing repeating groups would 
not be properly resent under a FIXT.1.1 session

Fixed compilation error with OdbcStore

1.13.1
------
Fixed install script under unix systems. The new FIX 5.0 and 
FIXT 1.1 headers were not being installed.

Fixed compiler errors under windows due to typedefs conflicting
with #defines.

Fixed exception being thrown when no LogFactory is provided.

User defined UTC timestamps will have milliseconds now.

Fixed memory leaks and other bugs in odbc interfaces.

Fixed exception caused by peername returning a null char*.

Corrected installation problems when DESTDIR is provided.

QuickFIX should build on netbsd, though it is not yet
officially supported.

Perfomance optimization for .NET messagecrackers.


1.13.0
------
Support for FIX 5.0 and FIXT 1.1 session transport.

Added solution files for Visual Studio 2008 and 2010.

Compiles under newer versions of gcc.

JNI API is no longer.  QuickFIX/J is recommended.  JAR file
included with quickfix distribution for your convenience.

Full support for 64 bit systems.

Switched from proprietary unit testing framework to UnitTest++.

Added settings for send and recieve buffer size on sockets.

Header and Trailer generated instead of hardcoded.

Groups can be queries against DataDictionary.

ConfigError will be generated if session is defined twice. Several other
improvements to recognizing bad configuration files.

PersistMessages is true by default.

identifyMessage exposed to .NET API.

Fixed some potential deadlock scenarios with socket implementation.

Added support for backing up logs.

Added millisecond resolution to logs.

Added NullMessageStore implementation.

Sessions can be queried for data dictionary and configuration settings.

Fixed problems with resent messages going out with repeating groups
fields in the wrong order.

Fixed some issues with database connection pools.

Persistance is done before sending and will fail if message cannot be